[package]
name = "appvkek"
version = "0.2.0"
edition = "2021"
authors = ["Wasin Thonkaew <wasin@wasin.io>"]
description = "cli tool to perform security measurements on approval and allowance on target token smart contracts connected to user' wallet address"
repository = "https://github.com/haxpor/appvkek"
license = "MIT"
keywords = ["evm-based", "approve", "allowance", "security", "crypto"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
evmscan = "0.6.0"
web3 = "0.18.0"
hex = "0.4.3"
tokio = { version = "1.17.0", features = ["full"] }
regex = "1.5.5"
futures = "0.3.21"
